--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </style>
 </head>
 <body>
-    <h1>Improved Galton Board</h1>
+    <h1>Interactive Galton Board</h1>
     <div id="controls">
         <label for="levels">Levels:</label>
         <input type="number" id="levels" min="5" max="20" value="12">
